# BuilderGenerator

./: .gitignore  Cargo.toml  README.md
example/: .gitignore  Cargo.toml  render.sh
example/resources/renders/: test_cube.json
example/src/: main.rs
example/test_blends/test_cube/: test_1.blend  test_2.blend
sprite_maker/: Cargo.toml
sprite_maker/src/: internal_sheet.rs  main.rs  render.rs
sprite_maker/src/render_blend_file/: render.py
sprite_maker/src/render_model_sheet/: make_sheet.rs  render_animation.rs  render_animations.rs  save.rs
sprite_sheet/: Cargo.toml
sprite_sheet/src/: lib.rs
src/render_blend_file/: mod.rs
src/render_model_sheet/: mod.rs  save.rs  sorted_map.rs  source_imgs.rs
