[package]
name = "builder_generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
benchmark = ["benchy/benchmark"]

[dependencies]
benchy = {git="https://github.com/ericrobolson/benchy"}
image = "0.23"
builder_sheet_rust = {git = "https://github.com/ericrobolson/BuilderSheetRust", rev="7300060" }
walkdir = "2.3"
