[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6"
builder_sheet_rust = {git = "https://github.com/ericrobolson/BuilderSheetRust", rev="7300060" }
glam = { version = "0.20", features = ["mint"]}
