[package]
name = "sprite_maker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
benchmark = ["benchy/benchmark"]

[dependencies]
benchy = {git="https://github.com/ericrobolson/benchy"}
image = "0.23"
sprite_sheet = {path="../sprite_sheet"}
walkdir = "2.3"